--- a/programacao.html
+++ b/programacao.html
@@ -9,53 +9,96 @@
 body{
   margin:0;
   font-family:Arial,sans-serif;
-  background:#0A3D91;
+  background:linear-gradient(135deg,#0A3D91,#0d52c1);
   color:#fff;
   padding:20px;
 }
 .container{
-  max-width:520px;
+  max-width:680px;
   margin:auto;
 }
 h2{
   text-align:center;
-  margin-bottom:10px;
+  margin-bottom:5px;
 }
 p.sub{
   text-align:center;
   font-size:13px;
-  opacity:.8;
+  opacity:.85;
+  margin-bottom:20px;
 }
 
-input, textarea, button{
-  width:100%;
-  padding:14px;
+.section{
+  background:#ffffff;
+  color:#000;
+  border-radius:10px;
+  padding:15px;
+  margin-bottom:15px;
+  box-shadow:0 4px 10px rgba(0,0,0,.15);
+}
+
+.section h3{
+  margin:0 0 10px;
   font-size:16px;
-  margin-top:10px;
-  border:none;
-  border-radius:6px;
+  color:#0A3D91;
+  display:flex;
+  align-items:center;
+  gap:8px;
 }
 
-textarea{
-  resize:vertical;
+label{
+  font-size:13px;
+  font-weight:bold;
+  margin-top:10px;
+  display:block;
+}
+
+input, select, textarea{
+  width:100%;
+  padding:12px;
+  margin-top:5px;
+  border-radius:6px;
+  border:1px solid #ccc;
+  font-size:15px;
+}
+
+textarea{ resize:vertical; }
+
+.grid{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:10px;
+}
+
+.cliente{
+  border:1px dashed #0A3D91;
+  border-radius:8px;
+  padding:10px;
+  margin-top:10px;
+  background:#f5f8ff;
 }
 
 button{
+  width:100%;
+  padding:15px;
   background:#D71920;
   color:#fff;
+  border:none;
+  border-radius:8px;
+  font-size:17px;
   font-weight:bold;
   cursor:pointer;
+  margin-top:15px;
 }
 
 button:disabled{
   opacity:.6;
-  cursor:not-allowed;
 }
 
 .msg{
-  margin-top:15px;
   text-align:center;
   font-weight:bold;
+  margin-top:15px;
 }
 
 /* SPINNER */
@@ -77,7 +120,7 @@ footer{
   margin-top:30px;
   text-align:center;
   font-size:12px;
-  opacity:0.8;
+  opacity:.8;
 }
 </style>
 </head>
@@ -85,24 +128,61 @@ footer{
 <body>
 
 <div class="container">
-  <h2>Programação de Cargas</h2>
+  <h2>📋 Programação de Cargas</h2>
   <p class="sub">Rio Branco Distribuidora de Combustíveis</p>
 
-  <input id="data" type="date">
-  <input id="hora" type="time">
-  <input id="vendedor" placeholder="Vendedor">
-  <input id="cliente" placeholder="Cliente">
-  <input id="cidade" placeholder="Cidade">
-  <input id="volume" type="number" step="0.01" placeholder="Volume">
-  <textarea id="obs" placeholder="Observações"></textarea>
-  <input id="senha" type="password" placeholder="Senha administrativa">
+  <!-- DADOS GERAIS -->
+  <div class="section">
+    <h3>🗓️ Dados da Carga</h3>
 
-  <button id="btn" onclick="programar()">Programar Carga</button>
+    <div class="grid">
+      <div>
+        <label>Data do carregamento</label>
+        <input id="data" type="date">
+      </div>
+      <div>
+        <label>Hora prevista</label>
+        <input id="hora" type="time">
+      </div>
+    </div>
 
-  <div class="msg" id="msg"></div>
-  <div id="loading" style="display:none">
-    <div class="spinner"></div>
+    <label>👤 Vendedor</label>
+    <input id="vendedor" placeholder="Nome do vendedor">
+
+    <label>🚚 Tipo de Compartimento</label>
+    <select id="tipoCompart">
+      <option value="">Selecione</option>
+      <option>Tanque 15m³</option>
+      <option>Tanque 20m³</option>
+      <option>Tanque 30m³</option>
+      <option>Outros</option>
+    </select>
   </div>
+
+  <!-- CLIENTES -->
+  <div class="section">
+    <h3>🏭 Clientes e Destinos</h3>
+
+    <!-- CLIENTE 1 A 5 -->
+    <div id="clientes"></div>
+  </div>
+
+  <!-- OBS -->
+  <div class="section">
+    <h3>📝 Observações</h3>
+    <textarea id="obs" placeholder="Ex: restrições, horário, observações gerais"></textarea>
+  </div>
+
+  <!-- SENHA -->
+  <div class="section">
+    <h3>🔐 Segurança</h3>
+    <input id="senha" type="password" placeholder="Senha administrativa">
+  </div>
+
+  <button id="btn" onclick="programar()">✅ Programar Carga</button>
+
+  <div id="loading" style="display:none"><div class="spinner"></div></div>
+  <div class="msg" id="msg"></div>
 </div>
 
 <footer>
@@ -112,67 +192,81 @@ footer{
 <script>
 const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbyjSbo7fO2pmc8IjkGDarvFw0QRQs333uLt9oNVgji6fEPErcoeibiKmcLsXMTz_eGQ6w/exec";
 
-const btn = document.getElementById("btn");
-const msg = document.getElementById("msg");
-const loading = document.getElementById("loading");
+const clientesDiv = document.getElementById("clientes");
 
-function setLoading(v){
-  btn.disabled = v;
-  loading.style.display = v ? "block" : "none";
+// cria 5 blocos de cliente
+for(let i=1;i<=5;i++){
+  clientesDiv.innerHTML += `
+    <div class="cliente">
+      <strong>Cliente ${i}</strong>
+      <label>🏢 Nome do Cliente</label>
+      <input id="cliente${i}" placeholder="Cliente ${i}">
+      <div class="grid">
+        <div>
+          <label>📍 Cidade</label>
+          <input id="cidade${i}" placeholder="Cidade">
+        </div>
+        <div>
+          <label>🛢️ Capacidade (Litros)</label>
+          <input id="volume${i}" type="number" placeholder="Ex: 5000">
+        </div>
+      </div>
+    </div>
+  `;
 }
 
 function programar(){
-  msg.textContent = "";
-
   const dados = {
-    acao: "programar",
-    senha: senha.value,
-    data: data.value,
-    hora: hora.value,
-    vendedor: vendedor.value,
-    cliente: cliente.value,
-    cidade: cidade.value,
-    volume: volume.value,
-    obs: obs.value
+    acao:"programar",
+    senha:senha.value,
+    data:data.value,
+    hora:hora.value,
+    vendedor:vendedor.value,
+    tipoCompart:tipoCompart.value,
+    obs:obs.value,
+    clientes:[]
   };
 
-  // validação básica
-  if(!dados.data || !dados.hora || !dados.vendedor || !dados.cliente || !dados.volume || !dados.senha){
-    msg.textContent = "⚠️ Preencha todos os campos obrigatórios";
+  for(let i=1;i<=5;i++){
+    if(document.getElementById("cliente"+i).value){
+      dados.clientes.push({
+        nome:document.getElementById("cliente"+i).value,
+        cidade:document.getElementById("cidade"+i).value,
+        volume:document.getElementById("volume"+i).value
+      });
+    }
+  }
+
+  if(!dados.data || !dados.hora || !dados.vendedor || !dados.senha || dados.clientes.length===0){
+    msg.textContent="⚠️ Preencha os dados obrigatórios e ao menos um cliente";
     return;
   }
 
-  setLoading(true);
+  btn.disabled=true;
+  loading.style.display="block";
+  msg.textContent="⏳ Enviando programação...";
 
-  fetch(SCRIPT_URL, {
-    method: "POST",
-    headers: {
-      "Content-Type": "application/x-www-form-urlencoded"
-    },
-    body: new URLSearchParams(dados)
+  fetch(SCRIPT_URL,{
+    method:"POST",
+    headers:{"Content-Type":"application/x-www-form-urlencoded"},
+    body:new URLSearchParams({
+      acao:"programar",
+      senha:dados.senha,
+      data:dados.data,
+      hora:dados.hora,
+      vendedor:dados.vendedor,
+      obs:JSON.stringify(dados)
+    })
   })
-  .then(r => r.text())
-  .then(ret => {
-    msg.textContent = ret;
-    setLoading(false);
-
-    if(ret.startsWith("✅")){
-      data.value="";
-      hora.value="";
-      vendedor.value="";
-      cliente.value="";
-      cidade.value="";
-      volume.value="";
-      obs.value="";
-    }
-  })
-  .catch(err=>{
-    msg.textContent = "❌ Erro de conexão";
-    setLoading(false);
+  .then(r=>r.text())
+  .then(ret=>{
+    msg.textContent=ret;
+    btn.disabled=false;
+    loading.style.display="none";
   });
 }
 
-document.getElementById("ano").textContent = new Date().getFullYear();
+document.getElementById("ano").textContent=new Date().getFullYear();
 </script>
 
 </body>
